--- a/wp-content/themes/basic-child/style.css
+++ b/wp-content/themes/basic-child/style.css
@@ -2,10 +2,124 @@
  * Theme Name: Basic Child
  * Template: basic
  * Description: This is a child theme for Basic
- * Author: Fglx
+ * Author: fglx
  */
 
 
-body {
-/*    background-color: red !important; */
+html, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
 }
+
+body .widget ul {
+    list-style: outside url('/pics/music_note.svg'); // TODO find a better svg
+}
+
+#header {
+    min-height: unset;
+}
+
+/*.wrapper {*/
+    /*min-height: 100%;*/
+    /*position: relative;*/
+/*}*/
+/*#main {*/
+    /*padding-bottom: 60px;*/
+/*}*/
+/*#footer {*/
+    /*!*display: block;*!*/
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    /*width: 100%;*/
+    /*height: 50px;*/
+    /*padding: 0;*/
+    /*margin: 0;*/
+/*}*/
+
+/* Make top menu bar full width for desktop devices */
+@media (min-width: 1024px) {
+    .top-menu.maxwidth {
+        padding-left: 20px;
+        padding-right: 20px;
+        /*max-width: none;*/
+        /*width: 100%;*/
+        border-radius: 10px 10px 0 0;
+    }
+}
+
+/*.header-top-wrap {*/
+    /*display: none;*/
+/*}*/
+
+body {
+    position: relative;
+    background: url('/pics/background.jpg') repeat;
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+.header-top-wrap {
+    /*max-width: 1080px;*/
+    /*max-height: 160px;*/
+    /*margin: 20px auto 20px auto;*/
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /*padding: 20px;*/
+    /*background-image: url('/pics/logo_text_2.png');*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: contain;*/
+    /*background-color: red;*/
+}
+
+/*#logo {*/
+    /*max-width: 100%;*/
+    /*!*max-height: 100%;*!*/
+/*}*/
+
+#main {
+    background-color: white;
+    padding: 20px;
+    margin-bottom: 60px;
+    border-radius: 0 0 10px 10px;
+}
+
+/*#note {*/
+    /*position: absolute;*/
+    /*z-index: 50;*/
+    /*width: 100%;*/
+    /*height: 980px;*/
+    /*background-image: url('/pics/notes.png');*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: contain;*/
+/*}*/
+
+#footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+}
+
+#footer-flower {
+    position:absolute;
+    top: -6px;
+    max-height: 30px;
+}
+
+/*#header #footer {*/
+    /*border-radius: 0;*/
+/*}*/
+
+/*body.custom-background .wrapper {*/
+    /*border-radius: unset ;*/
+    /*margin: 0 auto;*/
+/*}*/
